# kbd_reader

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  log.md  resume.sh
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
kernel/: Makefile  compile_commands.json  kbd_sim.c
lib/: CMakeLists.txt  scancode_map.c  scancode_map.h  stats.c  stats.h
tests/: CMakeLists.txt  test_scancode.c  test_stats.c
